# Imago

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-history  LICENSE.GPL  README.md  SConstruct  build-iphone-lib.sh  build-universal-ego.sh  build-universal-jni.sh  build.bat  build.cmd  build.sh  install_script.nsi  release-all-linux.sh  release-all-mac.sh  release-all.bat  start-fuzzing.bat
api/c/: CMakeLists.txt
api/c/src/: imago_c.cpp  imago_c.h  recognition_context.cpp  recognition_context.h  session_manager.cpp  session_manager.h
api/java/: CMakeLists.txt
cmake/: Boost.cmake  (+8 more)
core/: CMakeLists.txt
core/src/: accum_field.h  algebra.cpp  algebra.h  approximator.cpp  approximator.h  basic_2d_storage.h  beast.h  character_recognizer.cpp  character_recognizer.h  chemical_structure_recognizer.cpp  chemical_structure_recognizer.h  chemical_validity.cpp  chemical_validity.h  comdef.h  complex_contour.cpp  complex_contour.h  complex_number.cpp  complex_number.h  double_bond_maker.cpp  double_bond_maker.h  exception.h  failsafe_png.cpp  failsafe_png.h  file_helpers.cpp  file_helpers.h  filters_list.cpp  filters_list.h  font.inc  fonts_list.cpp  fonts_list.h  graph_extractor.cpp  graph_extractor.h  graphics_detector.cpp  graphics_detector.h  image.cpp  image.h  image_draw_utils.cpp  image_draw_utils.h  image_utils.cpp  image_utils.h  (+72 more)
ego/: CMakeLists.txt  SConscript  build.xml  ln-libs-linux.sh  mani.mf  manifest.mf
ego/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
ego/runscripts/: ego  ego.bat
ego/src/com/gga/: Ego.form  Ego.java  ImagePanel.java  IsmilesHelper.java  MoleculePanel.java  MoleculeSelection.java  Sketcher.java
ego/src/com/ggasoftware/: Ego.java  EgoFrame.java  FormBuilder.java  ImagePanel.java  MoleculePanel.java  Sketcher.java  Utils.java
font_generator/: CMakeLists.txt
font_generator/src/: font_generator.cpp
imago/: CMakeLists.txt  SConscript  imago_lib.vcproj
imago/imago.xcodeproj/: project.pbxproj
imago/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
imago/src/: HistogramTools.cpp  HistogramTools.h  RGBInit.cpp  RGBInit.h  TEST.font.inc  TEST2.font.inc  TEST3.font.inc  TEST4.font.inc  adaptive_filter.cpp  adaptive_filter.h  affine_transform.h  algebra.cpp  algebra.h  approximator.cpp  approximator.h  arial.font.inc  arial_bold.font.inc  basic_2d_storage.h  beast.h  binarizer.cpp  binarizer.h  bitarray.cpp  bitarray.h  bond.h  character_endpoints.cpp  character_endpoints.h  character_recognizer.cpp  character_recognizer.h  character_recognizer_data.cpp  character_recognizer_data.h  character_recognizer_font.cpp  chemical_structure_recognizer.cpp  chemical_structure_recognizer.h  chemical_validity.cpp  chemical_validity.h  classification.h  color_channels.h  comdef.h  complex_contour.cpp  complex_contour.h  (+175 more)
imago_c/: CMakeLists.txt  SConscript  imago_c.vcproj  imago_version.cmake
imago_c/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
imago_c/src/: current_session.h  imago_c.cpp  imago_c.h  imago_session.h  imago_version.h  imago_version.h.in  lock.h  lock_posix.cpp  lock_win.cpp  recognition_context.cpp  recognition_context.h  session_manager.cpp  session_manager.h  static_object.cpp  static_object.h  thread_local_posix.cpp  thread_local_ptr.h  thread_local_win.cpp
imago_console/: CMakeLists.txt
imago_console/src/: file_helpers.cpp  file_helpers.h  learning_context.h  machine_learning.cpp  machine_learning.h  main.cpp  recognition_helpers.cpp  recognition_helpers.h  similarity_tools.cpp  similarity_tools.h
imago_python/: CMakeLists.txt
imago_python/imago/: __init__.py  imago.py  imago_exception.py  imago_filters.py  imago_log_record.py
imago_python/tests/: __init__.py  test_imago.py
ireco/: BeerMat-cmake-Info.plist  CMakeLists.txt  KetcherViewController.xib  MainWindow.xib  Makefile  OverlayViewController.xib  ReaxysViewController.h  ReaxysViewController.m  ReaxysViewController.xib  RootViewController.xib  imago_iphone-Info.plist  main.cpp  main.m
ireco/Classes/: CropView.h  CropView.m  KetcherViewController.h  KetcherViewController.m  KetcherViewController.mm  MagnifierView.h  MagnifierView.m  MainViewController.h  MainViewController.m  MainViewController.mm  MainWindow.h  MainWindow.m  OverlayViewController.h  OverlayViewController.m  Recognizer.h  Recognizer.mm  RootViewController.h  RootViewController.m  imago_iphoneAppDelegate.h  imago_iphoneAppDelegate.m  imago_iphoneAppDelegate.mm
ireco/Ketcher/: TODO.md  ketcher.css  ketcher.html  ketcher.js
ireco/Ketcher/chem/: molfile.js
ireco/Ketcher/rnd/: events.js  render.js
ireco/Ketcher/ui/: ui.js
ireco/en.lproj/: MainWindow.xib
ireco/iPad/: MainWindow-iPad.xib
ireco/ireco.xcodeproj/: project.pbxproj
libpng/: CMakeLists.txt
libpng/libpng.xcodeproj/: project.pbxproj
libpng/src/: compress.c  crc32.c  deflate.c  deflate.h  png.h  uncompr.c  zconf.h  zutil.h
tools/imago/: CMakeLists.txt
tools/imago/src/: learning_context.h  machine_learning.cpp  machine_learning.h  main.cpp  recognition_helpers.cpp  recognition_helpers.h  similarity_tools.cpp  similarity_tools.h
tools/imago/tests/: .gitignore  CMakeLists.txt  run.py
tools/imago/tests/images/: 2008007515_51_chem.mol  us20010020021a1-20010906-c00468.mol  us20010056203a1-20011227-c00010.mol  us20020002161a1-20020103-c00187.mol  us20020019389a1-20020214-c00163.mol  us20020022637a1-20020221-c00401.mol  us20020025948a1-20020228-c00120.mol  us20020025976a1-20020228-c00039.mol  us20020025976a1-20020228-c00470.mol  us20020025976a1-20020228-c00737.mol  us20020028823a1-20020307-c00721.mol  us20020032221a1-20020314-c00301.mol  us20020049194a1-20020425-c01367.mol  us20020049195a1-20020425-c00085.mol  us20020049195a1-20020425-c00432.mol  us20020049201a1-20020425-c00126.mol  us20020052513a1-20020502-c00985.mol  us20020052513a1-20020502-c01434.mol  (+6 more)
(+354 files in other folders)
